--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,18 +32,23 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  firebase_auth: ^0.18.1+1
+  cloud_firestore: ^0.14.1+2
+  firebase_core : ^0.5.0
+  provider: ^4.3.2+2
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
+
+
 flutter:
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
