--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
   cloud_firestore: ^0.14.1+2
   firebase_core : ^0.5.0
   provider: ^4.3.2+2
+  flutter_spinkit: "^4.1.2"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -50,7 +51,8 @@ flutter:
   uses-material-design: true
   
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
